<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip This</string>
    <string name="action_settings">Settings</string>
    <string name="total_hint">Enter amount here</string>
    <string name="action_about">© 2015 Alison Hawke</string>
    <string name="fifteen_pc">15%</string>
    <string name="twenty_pc">20%</string>
    <string name="twenty_five_pc">25%</string>
    <string name="thirty_pc">30%</string>
    <string name="format_15pc">15%%: %s</string>
    <string name="format_20pc">20%%: %s</string>
    <string name="format_25pc">25%%: %s</string>
    <string name="format_30pc">30%%: %s</string>
    <string name="format_total">Total: %s</string>

</resources>
