<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MyActivity"
    tools:showIn="@layout/activity_my">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_margin="5dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/mealTotalInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/total_hint"
                android:includeFontPadding="true"
                android:inputType="numberDecimal"
                android:padding="10dp"/>
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="Round?"/>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt15percenttip"
                style="@style/big_label_left"
                android:text="@string/fifteen_pc"
                />

            <TextView
                android:id="@+id/txt15percenttotal"
                style="@style/big_label_right"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt20percenttip"
                style="@style/big_label_left"
                android:text="@string/twenty_pc"
                />

            <TextView
                android:id="@+id/txt20percenttotal"
                style="@style/big_label_right"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt25percenttip"
                style="@style/big_label_left"
                android:text="@string/twenty_five_pc"
                />

            <TextView
                android:id="@+id/txt25percenttotal"
                style="@style/big_label_right"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt30percenttip"
                style="@style/big_label_left"
                android:text="@string/thirty_pc"
                />

            <TextView
                android:id="@+id/txt30percenttotal"
                style="@style/big_label_right"/>

        </TableRow>
    </TableLayout>
</LinearLayout>
